Version 0.7-0 (2016-01-27)

o Added Glass data
o introduce links and references to DDAR
o added mcaplot() to plot MCA solutions in DDAR style

Version 0.6-12 (2015-10-06)

o Added Burt data
o Fixed examples/vignette for ggplot_2.0.0


Version 0.6-11 (2015-09-14)

o bump pgk version for CRAN

Version 0.6-10 (2015-07-27)

o Added HospVisits data

Version 0.6-9 (2015-06-11)

o Added Mice data 
o Removed uses of summarise() and Summarise() from demos and examples, in preparation for deprecating them.
o summarise() is now deprecated
o Now use importsFrom() for all functions from recommended packages

Version 0.6-8 (2015-04-15)

o Fixed Title: and Description: for CRAN

Version 0.6-7 (2015-04-02)

o Removed loddsratio (now in vcd) (rev 252)
o Removed print.Kappa (now in vcd) (rev 253)
o Fixed bug in CMHtest: rmeans and cmeans labels were reversed (rev 254)
o Fixed error in Fungicide.Rd, now that we require vcd_1.3-3 (rev 254)
o Added WorkerSat data - 2 x 2 x 2
o Added AirCrash data

Version 0.6-6 (2015-02-04)

o Minor doc changes

Version 0.6-5 (2014-11-07)

o Added Cormorants data (fixed to latest)
o Added LRstats, to replace Summarise. Older summarise() and Summarise() will eventually be deprecated.
o Now Suggests: AER for NMES1988 data
o collapse.table() now works with array objects


Version 0.6-3 (2014-10-27)

o Fixed bug in logLik.loglm when the data contain zero frequencies (rev 228)
o Made Summarise generic, adding a method for "glmlist" objects (rev 230)
o Added a coef() method for "glmlist" objects (thx: John Fox)
o Added a Summarise.loglmlist method (rev 232)
o Replaced all documentation uses of summarise() with Summarise() (rev 233)
o Added cutfac(), a convenience wrapper for cut() (rev 234)
o Now use rgl:: in all mosaic3d functions

Version 0.6-2 (2014-06-30)

o added Summarise, to replace summarise
o Added HairEyePlace data - 4 x 5 x 2, Caithness and Aberdeen hair/eye color (rev 223)
o Added PhdPubs data from Long (1997) - publications by PhD candidates