@@ -53,7 +53,8 @@ export(
 	Summarise,
 	LRstats,
 	cutfac,
-  mcaplot
+  mcaplot,
+  update.xtabs
 	)
 
 # basic methods for glm & loglm objects
@@ -64,6 +65,7 @@ S3method(modFit, glm)
 S3method(modFit, loglm)
 S3method(mosaic, glmlist)
 S3method(mosaic, loglmlist)
+S3method(update, xtabs)
 
 #S3method(summarise, glm)
 #S3method(summarise, glmlist)
