@@ -3,6 +3,7 @@ Version 0.7-0 (2016-01-27)
 o Added Glass data
 o introduce links and references to DDAR
 o added mcaplot() to plot MCA solutions in DDAR style
+o added update.xtabs method
 
 Version 0.6-12 (2015-10-06)
 
@@ -12,7 +13,7 @@ o Fixed examples/vignette for ggplot_2.0.0
 
 Version 0.6-11 (2015-09-14)
 
-o bump pgk version for CRAN
+o bump pkg version for CRAN
 
 Version 0.6-10 (2015-07-27)
 
